logs/Slang/chapter-7/arrays/associative/methods/first.sv.log
name: associative-arrays-first
description: Test support of associative arrays methods (first)
should_fail: 0
tags: 7.9.4 7.9
files: /home/travis/build/SymbiFlow/sv-tests/tests/chapter-7/arrays/associative/methods/first.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-7/arrays/associative/methods/first.sv:9:11: error: expected expression
int map [ string ];
          ^~~~~~
